corrected the whitespace in footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,9 @@ header {
   align-items: center;
   background-color: rgb(86, 39, 255);
 }
-
+body{
+  background-color: #222;
+}
 header > form {
   display: flex;
   justify-content: space-around;
